@@ -56,14 +56,22 @@
 		#endif
 
 	/* Macros: */
+		#if !defined(__DOXYGEN__)
+			#define _GETADCMUXMASK2(x, y)       x ## y
+			#define _GETADCMUXMASK(x, y)        _GETADCMUXMASK2(x, y)
+		#endif
+
 		/** Programmer ID string, returned to the host during the CMD_SIGN_ON command processing */
-		#define PROGRAMMER_ID       "AVRISP_MK2"
+		#define PROGRAMMER_ID              "AVRISP_MK2"
 		
 		/** Timeout period for each issued command from the host before it is aborted */
-		#define COMMAND_TIMEOUT_MS   200
+		#define COMMAND_TIMEOUT_MS         200
 		
 		/** Command timeout counter register, GPIOR for speed */
-		#define TimeoutMSRemaining   GPIOR0
+		#define TimeoutMSRemaining         GPIOR0
+		
+		/** MUX mask for the VTARGET ADC channel number */
+		#define VTARGET_ADC_CHANNEL_MASK   _GETADCMUXMASK(ADC_CHANNEL, VTARGET_ADC_CHANNEL)
 
 	/* External Variables: */
 		extern uint32_t CurrentAddress;
